--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="space.shafya.notes">
+    package="space.shafya.notes" >
 
     <application
         android:allowBackup="true"
@@ -10,15 +10,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Note"></activity>
+        tools:ignore="GoogleAppIndexingWarning" >
+        <activity android:name=".Note" />
         <activity
             android:name=".Sign"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
             android:clearTaskOnLaunch="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
